<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.3.2</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>

	<version>2.0.11-SNAPSHOT</version>
	<groupId>com.huntercodexs.codexstester</groupId>

	<name>codexstester</name>
	<artifactId>codexstester</artifactId>
	<description>codexstester</description>

	<properties>

		<java.version>21</java.version>

		<junit.version>4.13.2</junit.version>
		<junit-jupiter.version>5.8.2</junit-jupiter.version>
		<junit-platform.version>1.10.3</junit-platform.version>
		<cucumber.version>7.12.0</cucumber.version>
		<extent-report.version>1.13.0</extent-report.version>
		<selenium.version>4.19.1</selenium.version>

		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties>

	<dependencies>

		<!--SPRING BOOT STARTER WEB-->
		<!--
			IMPORTANT: To avoid multiple slf4j and others warnings in another spring boot
			project comment the lines below before build the codexstester jar file, this
			dependency is used just for development !

			TIP: One best practice is to remove completely that one to avoid misunderstands
			by others developers !
		-->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<!--SPRING BOOT: TEST-->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>compile</scope>
			<exclusions>
				<exclusion>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-starter-logging</artifactId>
				</exclusion>
				<exclusion>
					<groupId>log4j</groupId>
					<artifactId>log4j</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<!--JUNIT4-->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>compile</scope>
		</dependency>
		<!--JUNIT5-->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>${junit-jupiter.version}</version>
			<scope>compile</scope>
		</dependency>
		<!--JUNIT-PLATFORM: SUITE-->
		<dependency>
			<groupId>org.junit.platform</groupId>
			<artifactId>junit-platform-suite</artifactId>
			<version>${junit-platform.version}</version>
			<scope>compile</scope>
		</dependency>

		<!--PROJECT REACTOR-->
		<dependency>
			<groupId>io.projectreactor</groupId>
			<artifactId>reactor-test</artifactId>
			<scope>compile</scope>
		</dependency>

		<!--MOCK MVC-->
		<dependency>
			<groupId>org.springframework.restdocs</groupId>
			<artifactId>spring-restdocs-mockmvc</artifactId>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>io.rest-assured</groupId>
			<artifactId>spring-mock-mvc</artifactId>
			<scope>compile</scope>
		</dependency>

		<!--SELENIUM-->
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>${selenium.version}</version>
			<scope>compile</scope>
		</dependency>

		<!--CUCUMBER LEGACY: JAVA8 - FOR LAMBDAS-->
		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-java8</artifactId>
			<version>${cucumber.version}</version>
			<scope>compile</scope>
		</dependency>

		<!--CUCUMBER-->
		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-java</artifactId>
			<version>${cucumber.version}</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-spring</artifactId>
			<version>${cucumber.version}</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-junit</artifactId>
			<version>${cucumber.version}</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-junit-platform-engine</artifactId>
			<version>${cucumber.version}</version>
			<scope>compile</scope>
		</dependency>

		<!--CUCUMBER REPORT-->
		<dependency>
			<groupId>tech.grasshopper</groupId>
			<artifactId>extentreports-cucumber7-adapter</artifactId>
			<version>${extent-report.version}</version>
			<scope>compile</scope>
		</dependency>

	</dependencies>

	<repositories>
		<repository>
			<id>maven_central</id>
			<name>Maven Central</name>
			<url>https://repo.maven.apache.org/maven2/</url>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>spring-milestones</id>
			<name>Spring Milestones</name>
			<url>https://repo.spring.io/milestone</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</pluginRepository>
		<pluginRepository>
			<id>spring-snapshots</id>
			<name>Spring Snapshots</name>
			<url>https://repo.spring.io/snapshot</url>
			<releases>
				<enabled>false</enabled>
			</releases>
		</pluginRepository>
	</pluginRepositories>

	<build>
		<plugins>

			<!--Generate Jar file with the class main-->
			<!--<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<version>${project.parent.version}</version>
				<configuration>
					<mainClass>com.huntercodexs.codexstester.SampleApplication</mainClass>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.1.0</version>
			</plugin>-->

			<!--Generate Final Jar with all dependency-->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.2.4</version>
				<configuration>
					<createDependencyReducedPom>false</createDependencyReducedPom>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!--Generate Reports: extentreports-cucumber7-adapter-->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<!-- Set the test source directory -->
					<testSourceDirectory>src/test/java/codexstester/bdd</testSourceDirectory>
					<trimStackTrace>false</trimStackTrace>
					<excludes>
						<exclude>**/*Integration.java</exclude>
					</excludes>
					<systemPropertyVariables>
						<extent.reporter.html.start>true</extent.reporter.html.start>
						<!-- Specify the output path for the HTML report -->
						<extent.reporter.html.out>
							target/cucumber-reports/ApplicationTestReport.html
						</extent.reporter.html.out>
						<!-- Specify the Extent configuration file -->
						<extent.reporter.html.config>
							src/test/resources/reporting/extent-config.xml
						</extent.reporter.html.config>
						<!-- Enable quiet mode to suppress console logs -->
						<cucumber.publish.quiet>true</cucumber.publish.quiet>
					</systemPropertyVariables>
					<argLine>
						-ea
						-Xshare:off
						-XX:+EnableDynamicAgentLoading
						--add-opens java.base/java.util=ALL-UNNAMED
						--add-opens java.base/java.lang=ALL-UNNAMED
					</argLine>
				</configuration>
				<executions>
					<execution>
						<id>integration-test</id>
						<goals>
							<goal>test</goal>
						</goals>
						<phase>integration-test</phase>
						<configuration>
							<excludes>
								<exclude>none</exclude>
							</excludes>
							<includes>
								<include>**/*Integration.java</include>
							</includes>
						</configuration>
					</execution>
				</executions>
			</plugin>

		</plugins>
	</build>

</project>
